--- a/ShoppingList/app/src/main/AndroidManifest.xml
+++ b/ShoppingList/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShoppingList">
-        <activity android:name=".ShoppingListActivity">
+        <activity android:name=".ui.shoppinglist.ShoppingListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
